syntax = "proto3";
package fcat.auth.v1;
option go_package = "./pb";

message Empty {}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string accessToken = 1;
    string refreshToken =2;
}

message PubkeyResponse {
    string publicKey = 1;
}